[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/entities/bosses/Normal.gd" type="Script" id=1]
[ext_resource path="res://scenes/entities/lasers/LaserGun.tscn" type="PackedScene" id=2]
[ext_resource path="res://models/bosses/boss1.glb" type="PackedScene" id=4]

[sub_resource type="ConcavePolygonShape" id=1]
data = PoolVector3Array( 1.071, -0.1, -1.3504, -1.02, 0.1, -1.3064, -1.071, -0.1, -1.3504, 1.071, -0.1, -1.3504, 1.02, 0.1, -1.3064, -1.02, 0.1, -1.3064, -0.864, 0.1, 1.0336, 1.08, 0.1, 0.8836, 0.864, 0.1, 1.0336, 1.08, 0.1, 0.6136, 1.2811, 0.1, -1.0042, 1.2811, 0.1, 0.3253, -0.864, 0.1, 1.0336, 1.08, 0.1, 0.6136, 1.08, 0.1, 0.8836, -1.08, 0.1, 0.6136, -0.864, 0.1, 1.0336, -1.08, 0.1, 0.8836, -1.2811, 0.1, -1.0042, -1.08, 0.1, 0.6136, -1.2811, 0.1, 0.3253, 1.02, 0.1, -1.3064, -1.2811, 0.1, -1.0042, -1.02, 0.1, -1.3064, 1.08, 0.1, 0.6136, 1.02, 0.1, -1.3064, 1.2811, 0.1, -1.0042, -1.08, 0.1, 0.6136, 1.08, 0.1, 0.6136, -0.864, 0.1, 1.0336, 1.02, 0.1, -1.3064, -1.08, 0.1, 0.6136, -1.2811, 0.1, -1.0042, 1.08, 0.1, 0.6136, -1.08, 0.1, 0.6136, 1.02, 0.1, -1.3064, 1.134, -0.1, 0.9491, 1.08, 0.1, 0.6136, 1.134, -0.1, 0.6656, 1.134, -0.1, 0.9491, 1.08, 0.1, 0.8836, 1.08, 0.1, 0.6136, -1.134, -0.1, 0.6656, -1.08, 0.1, 0.8836, -1.134, -0.1, 0.9491, -1.134, -0.1, 0.6656, -1.08, 0.1, 0.6136, -1.08, 0.1, 0.8836, 0.9072, -0.1, 1.1066, 1.08, 0.1, 0.8836, 1.134, -0.1, 0.9491, 0.9072, -0.1, 1.1066, 0.864, 0.1, 1.0336, 1.08, 0.1, 0.8836, -0.9072, -0.1, 1.1066, 0.864, 0.1, 1.0336, 0.9072, -0.1, 1.1066, -0.9072, -0.1, 1.1066, -0.864, 0.1, 1.0336, 0.864, 0.1, 1.0336, -1.134, -0.1, 0.9491, -0.864, 0.1, 1.0336, -0.9072, -0.1, 1.1066, -1.134, -0.1, 0.9491, -1.08, 0.1, 0.8836, -0.864, 0.1, 1.0336, -1.02, 0.1, -1.3064, -1.3477, -0.1, -1.0302, -1.071, -0.1, -1.3504, -1.3477, -0.1, -1.0302, -1.3295, 0.0653, -0.9661, -1.373, -0.0653, -0.9831, -1.3295, 0.0653, -0.9661, -1.02, 0.1, -1.3064, -1.2811, 0.1, -1.0042, -1.3477, -0.1, -1.0302, -1.02, 0.1, -1.3064, -1.3295, 0.0653, -0.9661, 1.134, -0.1, 0.9491, -0.9072, -0.1, 1.1066, 0.9072, -0.1, 1.1066, -0.9072, -0.1, 1.1066, -1.134, -0.1, 0.6656, -1.134, -0.1, 0.9491, -1.134, -0.1, 0.6656, -1.3477, -0.1, -1.0302, -1.3477, -0.1, 0.3593, -1.3477, -0.1, -1.0302, 1.071, -0.1, -1.3504, -1.071, -0.1, -1.3504, 1.071, -0.1, -1.3504, 1.3477, -0.1, 0.3593, 1.3477, -0.1, -1.0302, 1.134, -0.1, 0.6656, -0.9072, -0.1, 1.1066, 1.134, -0.1, 0.9491, 1.071, -0.1, -1.3504, 1.134, -0.1, 0.6656, 1.3477, -0.1, 0.3593, -1.134, -0.1, 0.6656, 1.071, -0.1, -1.3504, -1.3477, -0.1, -1.0302, 1.134, -0.1, 0.6656, -1.134, -0.1, 0.6656, -0.9072, -0.1, 1.1066, -1.134, -0.1, 0.6656, 1.134, -0.1, 0.6656, 1.071, -0.1, -1.3504, -1.3317, 0.0639, 0.2762, -1.3477, -0.1, 0.3593, -1.3742, -0.0639, 0.2979, -1.3477, -0.1, 0.3593, -1.08, 0.1, 0.6136, -1.134, -0.1, 0.6656, -1.08, 0.1, 0.6136, -1.3317, 0.0639, 0.2762, -1.2811, 0.1, 0.3253, -1.3477, -0.1, 0.3593, -1.3317, 0.0639, 0.2762, -1.08, 0.1, 0.6136, 1.08, 0.1, 0.6136, 1.3477, -0.1, 0.3593, 1.134, -0.1, 0.6656, 1.3477, -0.1, 0.3593, 1.3317, 0.0639, 0.2762, 1.3742, -0.0639, 0.2979, 1.3317, 0.0639, 0.2762, 1.08, 0.1, 0.6136, 1.2811, 0.1, 0.3253, 1.3477, -0.1, 0.3593, 1.08, 0.1, 0.6136, 1.3317, 0.0639, 0.2762, -1.3412, 0.0722, 0.2786, -1.3742, -0.0639, 0.2979, -1.3892, -0.0722, 0.3032, -1.3412, 0.0722, 0.2786, -1.3317, 0.0639, 0.2762, -1.3742, -0.0639, 0.2979, 1.3892, -0.0722, 0.3032, 1.3317, 0.0639, 0.2762, 1.3412, 0.0722, 0.2786, 1.3892, -0.0722, 0.3032, 1.3742, -0.0639, 0.2979, 1.3317, 0.0639, 0.2762, 1.3405, 0.0719, -0.9702, 1.373, -0.0653, -0.9831, 1.3883, -0.0719, -0.9889, 1.3405, 0.0719, -0.9702, 1.3295, 0.0653, -0.9661, 1.373, -0.0653, -0.9831, 1.3295, 0.0653, -0.9661, 1.3477, -0.1, -1.0302, 1.373, -0.0653, -0.9831, 1.3477, -0.1, -1.0302, 1.02, 0.1, -1.3064, 1.071, -0.1, -1.3504, 1.02, 0.1, -1.3064, 1.3295, 0.0653, -0.9661, 1.2811, 0.1, -1.0042, 1.3477, -0.1, -1.0302, 1.3295, 0.0653, -0.9661, 1.02, 0.1, -1.3064, -1.3883, -0.0719, -0.9889, -1.3295, 0.0653, -0.9661, -1.3405, 0.0719, -0.9702, -1.3883, -0.0719, -0.9889, -1.373, -0.0653, -0.9831, -1.3295, 0.0653, -0.9661, 2.0697, -0.1, -1.7914, 1.5311, 0.1, -1.7264, 1.6077, -0.1, -1.7914, 2.0697, -0.1, -1.7914, 1.9711, 0.1, -1.7264, 1.5311, 0.1, -1.7264, 2.0483, -0.1, 1.547, 2.1711, 0.1, 0.2536, 2.2797, -0.1, 0.2876, 2.0483, -0.1, 1.547, 1.9517, 0.1, 1.453, 2.1711, 0.1, 0.2536, 1.4281, -0.1397, 0.2099, 1.4745, -0.2, -0.9164, 1.4281, -0.1397, -0.9502, 1.4281, -0.1397, 0.2099, 1.4745, -0.2, 0.0916, 1.4745, -0.2, -0.9164, -2.0277, -0.1, 1.547, -1.5179, -0.1392, 1.2561, -1.4418, -0.1, 1.441, -2.0277, -0.1, 1.547, -1.928, -0.1392, 1.3303, -1.5179, -0.1392, 1.2561, 1.4745, -0.2, -0.9164, 1.3977, -0.1, -1.0224, 1.4281, -0.1397, -0.9502, 1.3977, -0.1, -1.0224, 1.4745, -0.2, -1.4036, 1.3977, -0.1, -1.5814, 1.3977, -0.1, -1.0224, 1.4745, -0.2, -0.9164, 1.4745, -0.2, -1.4036, -2.2797, -0.1, 0.2876, -1.9311, 0.1, 1.453, -2.0277, -0.1, 1.547, -2.2797, -0.1, 0.2876, -2.1711, 0.1, 0.2536, -1.9311, 0.1, 1.453, -2.2797, -0.1, -1.5814, -2.1711, 0.1, 0.2536, -2.2797, -0.1, 0.2876, -2.2797, -0.1, -1.5814, -2.1711, 0.1, -1.5264, -2.1711, 0.1, 0.2536, -1.6077, -0.1, -1.7914, -1.9711, 0.1, -1.7264, -2.0697, -0.1, -1.7914, -1.6077, -0.1, -1.7914, -1.5311, 0.1, -1.7264, -1.9711, 0.1, -1.7264, 1.2811, 0.1, -1.0042, 1.3311, 0.1, -0.9964, 1.3607, 0.1404, -0.9248, 1.3311, 0.1, -0.9964, 1.3295, 0.0653, -0.9661, 1.3405, 0.0719, -0.9702, 1.2811, 0.1, -1.0042, 1.3295, 0.0653, -0.9661, 1.3311, 0.1, -0.9964, 1.5098, -0.2, 1.0143, 1.3996, -0.1, 0.3376, 1.4418, -0.1, 1.441, 1.3996, -0.1, 0.3376, 1.4745, -0.2, 0.0916, 1.4281, -0.1397, 0.2099, 1.3996, -0.1, 0.3376, 1.5098, -0.2, 1.0143, 1.4745, -0.2, 0.0916, -1.4281, -0.1397, -0.9501, -1.4741, -0.2, 0.0916, -1.4281, -0.1397, 0.2098, -1.4281, -0.1397, -0.9501, -1.4741, -0.2, -0.9164, -1.4741, -0.2, 0.0916, -1.3311, 0.1, -0.9964, -1.2811, 0.1, -1.0042, -1.3606, 0.1404, -0.9247, -1.2811, 0.1, -1.0042, -1.3405, 0.0719, -0.9702, -1.3295, 0.0653, -0.9661, -1.2811, 0.1, -1.0042, -1.3311, 0.1, -0.9964, -1.3405, 0.0719, -0.9702, 1.3607, 0.1404, -0.9248, 1.4043, 0.2, 0.0671, 1.3607, 0.1404, 0.1784, 1.3607, 0.1404, -0.9248, 1.4043, 0.2, -0.8929, 1.4043, 0.2, 0.0671, -1.9311, 0.1, 1.453, -1.928, -0.1392, 1.3303, -2.0277, -0.1, 1.547, -1.9311, 0.1, 1.453, -1.8604, 0.0008, 1.2645, -1.928, -0.1392, 1.3303, -1.4741, -0.2, 0.0916, -1.3996, -0.1, 0.3376, -1.4281, -0.1397, 0.2098, -1.3996, -0.1, 0.3376, -1.5094, -0.2, 1.0143, -1.4418, -0.1, 1.441, -1.3996, -0.1, 0.3376, -1.4741, -0.2, 0.0916, -1.5094, -0.2, 1.0143, 2.0697, -0.1, -1.7914, 2.1126, 0.1, -1.6678, 1.9711, 0.1, -1.7264, 2.0697, -0.1, -1.7914, 2.2182, -0.1, -1.7299, 2.1126, 0.1, -1.6678, 2.2182, -0.1, -1.7299, 2.1711, 0.1, -1.5264, 2.1126, 0.1, -1.6678, 2.2182, -0.1, -1.7299, 2.2797, -0.1, -1.5814, 2.1711, 0.1, -1.5264, 1.3977, -0.1, -1.5814, 1.3897, 0.1, -1.6678, 1.3311, 0.1, -1.5264, 1.3977, -0.1, -1.5814, 1.4592, -0.1, -1.7299, 1.3897, 0.1, -1.6678, 1.4592, -0.1, -1.7299, 1.5311, 0.1, -1.7264, 1.3897, 0.1, -1.6678, 1.4592, -0.1, -1.7299, 1.6077, -0.1, -1.7914, 1.5311, 0.1, -1.7264, -1.9711, 0.1, -1.7264, -2.2182, -0.1, -1.7299, -2.0697, -0.1, -1.7914, -1.9711, 0.1, -1.7264, -2.1126, 0.1, -1.6678, -2.2182, -0.1, -1.7299, -2.1126, 0.1, -1.6678, -2.2797, -0.1, -1.5814, -2.2182, -0.1, -1.7299, -2.1126, 0.1, -1.6678, -2.1711, 0.1, -1.5264, -2.2797, -0.1, -1.5814, -1.3311, 0.1, -1.5264, -1.4592, -0.1, -1.7299, -1.3977, -0.1, -1.5814, -1.3311, 0.1, -1.5264, -1.3897, 0.1, -1.6678, -1.4592, -0.1, -1.7299, -1.3897, 0.1, -1.6678, -1.6077, -0.1, -1.7914, -1.4592, -0.1, -1.7299, -1.3897, 0.1, -1.6678, -1.5311, 0.1, -1.7264, -1.6077, -0.1, -1.7914, 2.2797, -0.1, 0.2876, 2.1711, 0.1, -1.5264, 2.2797, -0.1, -1.5814, 2.2797, -0.1, 0.2876, 2.1711, 0.1, 0.2536, 2.1711, 0.1, -1.5264, 1.3731, 0.1, 1.359, 1.9007, 0.2, 1.0266, 1.9517, 0.1, 1.453, 1.3731, 0.1, 1.359, 1.4379, 0.2, 0.9514, 1.9007, 0.2, 1.0266, -1.9311, 0.1, 1.453, -1.4375, 0.2, 0.9514, -1.3731, 0.1, 1.359, -1.9311, 0.1, 1.453, -1.8839, 0.2, 1.0266, -1.4375, 0.2, 0.9514, -1.2811, 0.1, 0.3253, -1.333, 0.1, 0.3036, -1.3606, 0.1404, 0.1782, -1.333, 0.1, 0.3036, -1.3317, 0.0639, 0.2762, -1.3412, 0.0722, 0.2786, -1.2811, 0.1, 0.3253, -1.3317, 0.0639, 0.2762, -1.333, 0.1, 0.3036, 1.4043, 0.2, 0.0671, 1.9007, 0.2, 1.0266, 1.4379, 0.2, 0.9514, 1.9007, 0.2, 1.0266, 2.0763, 0.2, -1.3569, 2.0763, 0.2, 0.0671, 2.0763, 0.2, -1.3569, 1.9163, 0.2, -1.5169, 2.0294, 0.2, -1.47, 1.9163, 0.2, -1.5169, 1.4511, 0.2, -1.47, 1.5643, 0.2, -1.5169, 1.4511, 0.2, -1.47, 1.4043, 0.2, -0.8929, 1.4043, 0.2, -1.3569, 1.4043, 0.2, -0.8929, 1.9007, 0.2, 1.0266, 1.4043, 0.2, 0.0671, 1.9007, 0.2, 1.0266, 1.9163, 0.2, -1.5169, 2.0763, 0.2, -1.3569, 1.9163, 0.2, -1.5169, 1.4043, 0.2, -0.8929, 1.4511, 0.2, -1.47, 1.9007, 0.2, 1.0266, 1.4043, 0.2, -0.8929, 1.9163, 0.2, -1.5169, -1.4375, 0.2, 0.9514, -1.4039, 0.2, -0.8929, -1.4039, 0.2, 0.0671, -1.4039, 0.2, -0.8929, -1.4508, 0.2, -1.47, -1.4039, 0.2, -1.3569, -1.4508, 0.2, -1.47, -1.9159, 0.2, -1.5169, -1.5639, 0.2, -1.5169, -1.9159, 0.2, -1.5169, -2.0759, 0.2, -1.3569, -2.029, 0.2, -1.47, -2.0759, 0.2, -1.3569, -1.8839, 0.2, 1.0266, -2.0759, 0.2, 0.0671, -1.8839, 0.2, 1.0266, -1.4039, 0.2, -0.8929, -1.4375, 0.2, 0.9514, -1.4039, 0.2, -0.8929, -1.9159, 0.2, -1.5169, -1.4508, 0.2, -1.47, -1.9159, 0.2, -1.5169, -1.8839, 0.2, 1.0266, -2.0759, 0.2, -1.3569, -1.4039, 0.2, -0.8929, -1.8839, 0.2, 1.0266, -1.9159, 0.2, -1.5169, -1.3311, 0.1, -1.5264, -1.4508, 0.2, -1.47, -1.3897, 0.1, -1.6678, -1.3311, 0.1, -1.5264, -1.4039, 0.2, -1.3569, -1.4508, 0.2, -1.47, -1.4375, 0.2, 0.9514, -1.333, 0.1, 0.3036, -1.3731, 0.1, 1.359, -1.333, 0.1, 0.3036, -1.4039, 0.2, 0.0671, -1.3606, 0.1404, 0.1782, -1.333, 0.1, 0.3036, -1.4375, 0.2, 0.9514, -1.4039, 0.2, 0.0671, -2.1711, 0.1, 0.2536, -1.8839, 0.2, 1.0266, -1.9311, 0.1, 1.453, -2.1711, 0.1, 0.2536, -2.0759, 0.2, 0.0671, -1.8839, 0.2, 1.0266, -1.9711, 0.1, -1.7264, -2.029, 0.2, -1.47, -2.1126, 0.1, -1.6678, -1.9711, 0.1, -1.7264, -1.9159, 0.2, -1.5169, -2.029, 0.2, -1.47, 2.1711, 0.1, 0.2536, 2.0763, 0.2, -1.3569, 2.1711, 0.1, -1.5264, 2.1711, 0.1, 0.2536, 2.0763, 0.2, 0.0671, 2.0763, 0.2, -1.3569, 1.9517, 0.1, 1.453, 2.0763, 0.2, 0.0671, 2.1711, 0.1, 0.2536, 1.9517, 0.1, 1.453, 1.9007, 0.2, 1.0266, 2.0763, 0.2, 0.0671, -2.1711, 0.1, -1.5264, -2.0759, 0.2, 0.0671, -2.1711, 0.1, 0.2536, -2.1711, 0.1, -1.5264, -2.0759, 0.2, -1.3569, -2.0759, 0.2, 0.0671, -1.5311, 0.1, -1.7264, -1.9159, 0.2, -1.5169, -1.9711, 0.1, -1.7264, -1.5311, 0.1, -1.7264, -1.5639, 0.2, -1.5169, -1.9159, 0.2, -1.5169, 1.3897, 0.1, -1.6678, 1.4043, 0.2, -1.3569, 1.3311, 0.1, -1.5264, 1.3897, 0.1, -1.6678, 1.4511, 0.2, -1.47, 1.4043, 0.2, -1.3569, 2.1126, 0.1, -1.6678, 1.9163, 0.2, -1.5169, 1.9711, 0.1, -1.7264, 2.1126, 0.1, -1.6678, 2.0294, 0.2, -1.47, 1.9163, 0.2, -1.5169, -1.3897, 0.1, -1.6678, -1.5639, 0.2, -1.5169, -1.5311, 0.1, -1.7264, -1.3897, 0.1, -1.6678, -1.4508, 0.2, -1.47, -1.5639, 0.2, -1.5169, 1.4043, 0.2, 0.0671, 1.333, 0.1, 0.3036, 1.3607, 0.1404, 0.1784, 1.333, 0.1, 0.3036, 1.4379, 0.2, 0.9514, 1.3731, 0.1, 1.359, 1.333, 0.1, 0.3036, 1.4043, 0.2, 0.0671, 1.4379, 0.2, 0.9514, -2.1126, 0.1, -1.6678, -2.0759, 0.2, -1.3569, -2.1711, 0.1, -1.5264, -2.1126, 0.1, -1.6678, -2.029, 0.2, -1.47, -2.0759, 0.2, -1.3569, -1.4039, 0.2, -0.8929, -1.3311, 0.1, -0.9964, -1.3606, 0.1404, -0.9247, -1.3311, 0.1, -0.9964, -1.4039, 0.2, -1.3569, -1.3311, 0.1, -1.5264, -1.3311, 0.1, -0.9964, -1.4039, 0.2, -0.8929, -1.4039, 0.2, -1.3569, -1.3606, 0.1404, 0.1782, -1.4039, 0.2, -0.8929, -1.3606, 0.1404, -0.9247, -1.3606, 0.1404, 0.1782, -1.4039, 0.2, 0.0671, -1.4039, 0.2, -0.8929, 1.5311, 0.1, -1.7264, 1.4511, 0.2, -1.47, 1.3897, 0.1, -1.6678, 1.5311, 0.1, -1.7264, 1.5643, 0.2, -1.5169, 1.4511, 0.2, -1.47, 1.4043, 0.2, -1.3569, 1.3311, 0.1, -0.9964, 1.3311, 0.1, -1.5264, 1.3311, 0.1, -0.9964, 1.4043, 0.2, -0.8929, 1.3607, 0.1404, -0.9248, 1.3311, 0.1, -0.9964, 1.4043, 0.2, -1.3569, 1.4043, 0.2, -0.8929, 2.1711, 0.1, -1.5264, 2.0294, 0.2, -1.47, 2.1126, 0.1, -1.6678, 2.1711, 0.1, -1.5264, 2.0763, 0.2, -1.3569, 2.0294, 0.2, -1.47, 1.9711, 0.1, -1.7264, 1.5643, 0.2, -1.5169, 1.5311, 0.1, -1.7264, 1.9711, 0.1, -1.7264, 1.9163, 0.2, -1.5169, 1.5643, 0.2, -1.5169, -1.4741, -0.2, -1.4036, -1.4741, -0.2, 0.0916, -1.4741, -0.2, -0.9164, -1.4741, -0.2, 0.0916, -1.9781, -0.2, 1.0991, -1.5094, -0.2, 1.0143, -1.9781, -0.2, 1.0991, -2.1797, -0.2, -1.4036, -2.1797, -0.2, 0.0916, -2.1797, -0.2, -1.4036, -2.0117, -0.2, -1.5716, -2.1305, -0.2, -1.5223, -2.0117, -0.2, -1.5716, -1.5233, -0.2, -1.5223, -1.6421, -0.2, -1.5716, -1.5233, -0.2, -1.5223, -1.4741, -0.2, 0.0916, -1.4741, -0.2, -1.4036, -1.4741, -0.2, 0.0916, -2.1797, -0.2, -1.4036, -1.9781, -0.2, 1.0991, -2.1797, -0.2, -1.4036, -1.5233, -0.2, -1.5223, -2.0117, -0.2, -1.5716, -1.4741, -0.2, 0.0916, -1.5233, -0.2, -1.5223, -2.1797, -0.2, -1.4036, 1.5098, -0.2, 1.0143, 1.4745, -0.2, -0.9164, 1.4745, -0.2, 0.0916, 1.4745, -0.2, -0.9164, 1.5237, -0.2, -1.5223, 1.4745, -0.2, -1.4036, 1.5237, -0.2, -1.5223, 2.0121, -0.2, -1.5716, 1.6425, -0.2, -1.5716, 2.0121, -0.2, -1.5716, 2.1801, -0.2, -1.4036, 2.1309, -0.2, -1.5223, 2.1801, -0.2, -1.4036, 1.9949, -0.2, 1.0991, 2.1801, -0.2, 0.0916, 1.9949, -0.2, 1.0991, 1.4745, -0.2, -0.9164, 1.5098, -0.2, 1.0143, 1.4745, -0.2, -0.9164, 2.0121, -0.2, -1.5716, 1.5237, -0.2, -1.5223, 2.0121, -0.2, -1.5716, 1.9949, -0.2, 1.0991, 2.1801, -0.2, -1.4036, 1.4745, -0.2, -0.9164, 1.9949, -0.2, 1.0991, 2.0121, -0.2, -1.5716, 1.4592, -0.1, -1.7299, 1.6425, -0.2, -1.5716, 1.6077, -0.1, -1.7914, 1.4592, -0.1, -1.7299, 1.5237, -0.2, -1.5223, 1.6425, -0.2, -1.5716, -1.6077, -0.1, -1.7914, -1.5233, -0.2, -1.5223, -1.4592, -0.1, -1.7299, -1.6077, -0.1, -1.7914, -1.6421, -0.2, -1.5716, -1.5233, -0.2, -1.5223, 2.2182, -0.1, -1.7299, 2.1801, -0.2, -1.4036, 2.2797, -0.1, -1.5814, 2.2182, -0.1, -1.7299, 2.1309, -0.2, -1.5223, 2.1801, -0.2, -1.4036, -2.2797, -0.1, -1.5814, -2.1305, -0.2, -1.5223, -2.2182, -0.1, -1.7299, -2.2797, -0.1, -1.5814, -2.1797, -0.2, -1.4036, -2.1305, -0.2, -1.5223, 1.6077, -0.1, -1.7914, 2.0121, -0.2, -1.5716, 2.0697, -0.1, -1.7914, 1.6077, -0.1, -1.7914, 1.6425, -0.2, -1.5716, 2.0121, -0.2, -1.5716, -1.4418, -0.1, 1.441, -1.9781, -0.2, 1.0991, -2.0277, -0.1, 1.547, -1.4418, -0.1, 1.441, -1.5094, -0.2, 1.0143, -1.9781, -0.2, 1.0991, 2.0483, -0.1, 1.547, 1.5098, -0.2, 1.0143, 1.4418, -0.1, 1.441, 2.0483, -0.1, 1.547, 1.9949, -0.2, 1.0991, 1.5098, -0.2, 1.0143, -1.4741, -0.2, -1.4036, -1.3977, -0.1, -1.0224, -1.3977, -0.1, -1.5814, -1.3977, -0.1, -1.0224, -1.4741, -0.2, -0.9164, -1.4281, -0.1397, -0.9501, -1.3977, -0.1, -1.0224, -1.4741, -0.2, -1.4036, -1.4741, -0.2, -0.9164, -2.0277, -0.1, 1.547, -2.1797, -0.2, 0.0916, -2.2797, -0.1, 0.2876, -2.0277, -0.1, 1.547, -1.9781, -0.2, 1.0991, -2.1797, -0.2, 0.0916, 2.2797, -0.1, -1.5814, 2.1801, -0.2, 0.0916, 2.2797, -0.1, 0.2876, 2.2797, -0.1, -1.5814, 2.1801, -0.2, -1.4036, 2.1801, -0.2, 0.0916, 2.2797, -0.1, 0.2876, 1.9949, -0.2, 1.0991, 2.0483, -0.1, 1.547, 2.2797, -0.1, 0.2876, 2.1801, -0.2, 0.0916, 1.9949, -0.2, 1.0991, 1.333, 0.1, 0.3036, 1.2811, 0.1, 0.3253, 1.3607, 0.1404, 0.1784, 1.2811, 0.1, 0.3253, 1.3412, 0.0722, 0.2786, 1.3317, 0.0639, 0.2762, 1.2811, 0.1, 0.3253, 1.333, 0.1, 0.3036, 1.3412, 0.0722, 0.2786, 1.3977, -0.1, -1.5814, 1.5237, -0.2, -1.5223, 1.4592, -0.1, -1.7299, 1.3977, -0.1, -1.5814, 1.4745, -0.2, -1.4036, 1.5237, -0.2, -1.5223, 2.0697, -0.1, -1.7914, 2.1309, -0.2, -1.5223, 2.2182, -0.1, -1.7299, 2.0697, -0.1, -1.7914, 2.0121, -0.2, -1.5716, 2.1309, -0.2, -1.5223, -2.2797, -0.1, 0.2876, -2.1797, -0.2, -1.4036, -2.2797, -0.1, -1.5814, -2.2797, -0.1, 0.2876, -2.1797, -0.2, 0.0916, -2.1797, -0.2, -1.4036, -1.4592, -0.1, -1.7299, -1.4741, -0.2, -1.4036, -1.3977, -0.1, -1.5814, -1.4592, -0.1, -1.7299, -1.5233, -0.2, -1.5223, -1.4741, -0.2, -1.4036, -2.2182, -0.1, -1.7299, -2.0117, -0.2, -1.5716, -2.0697, -0.1, -1.7914, -2.2182, -0.1, -1.7299, -2.1305, -0.2, -1.5223, -2.0117, -0.2, -1.5716, -2.0697, -0.1, -1.7914, -1.6421, -0.2, -1.5716, -1.6077, -0.1, -1.7914, -2.0697, -0.1, -1.7914, -2.0117, -0.2, -1.5716, -1.6421, -0.2, -1.5716, 1.3311, 0.1, -1.5264, 1.3977, -0.1, -1.0224, 1.3977, -0.1, -1.5814, 1.3977, -0.1, -1.0224, 1.3405, 0.0719, -0.9702, 1.3883, -0.0719, -0.9889, 1.3405, 0.0719, -0.9702, 1.3311, 0.1, -1.5264, 1.3311, 0.1, -0.9964, 1.3977, -0.1, -1.0224, 1.3311, 0.1, -1.5264, 1.3405, 0.0719, -0.9702, 1.3412, 0.0722, 0.2786, 1.3996, -0.1, 0.3376, 1.3892, -0.0722, 0.3032, 1.3996, -0.1, 0.3376, 1.3731, 0.1, 1.359, 1.4418, -0.1, 1.441, 1.3731, 0.1, 1.359, 1.3412, 0.0722, 0.2786, 1.333, 0.1, 0.3036, 1.3996, -0.1, 0.3376, 1.3412, 0.0722, 0.2786, 1.3731, 0.1, 1.359, -1.3405, 0.0719, -0.9702, -1.3977, -0.1, -1.0224, -1.3883, -0.0719, -0.9889, -1.3977, -0.1, -1.0224, -1.3311, 0.1, -1.5264, -1.3977, -0.1, -1.5814, -1.3311, 0.1, -1.5264, -1.3405, 0.0719, -0.9702, -1.3311, 0.1, -0.9964, -1.3977, -0.1, -1.0224, -1.3405, 0.0719, -0.9702, -1.3311, 0.1, -1.5264, -1.3731, 0.1, 1.359, -1.3996, -0.1, 0.3376, -1.4418, -0.1, 1.441, -1.3996, -0.1, 0.3376, -1.3412, 0.0722, 0.2786, -1.3892, -0.0722, 0.3032, -1.3412, 0.0722, 0.2786, -1.3731, 0.1, 1.359, -1.333, 0.1, 0.3036, -1.3996, -0.1, 0.3376, -1.3731, 0.1, 1.359, -1.3412, 0.0722, 0.2786, 1.3607, 0.1404, 0.1784, 1.2811, 0.1, -1.0042, 1.3607, 0.1404, -0.9248, 1.3607, 0.1404, 0.1784, 1.2811, 0.1, 0.3253, 1.2811, 0.1, -1.0042, -1.2811, 0.1, 0.3253, -1.3606, 0.1404, -0.9247, -1.2811, 0.1, -1.0042, -1.2811, 0.1, 0.3253, -1.3606, 0.1404, 0.1782, -1.3606, 0.1404, -0.9247, -1.4281, -0.1397, 0.2098, -1.3477, -0.1, -1.0302, -1.4281, -0.1397, -0.9501, -1.4281, -0.1397, 0.2098, -1.3477, -0.1, 0.3593, -1.3477, -0.1, -1.0302, 1.3477, -0.1, 0.3593, 1.4281, -0.1397, -0.9502, 1.3477, -0.1, -1.0302, 1.3477, -0.1, 0.3593, 1.4281, -0.1397, 0.2099, 1.4281, -0.1397, -0.9502, 1.3977, -0.1, -1.0224, 1.3477, -0.1, -1.0302, 1.4281, -0.1397, -0.9502, 1.3477, -0.1, -1.0302, 1.3883, -0.0719, -0.9889, 1.373, -0.0653, -0.9831, 1.3477, -0.1, -1.0302, 1.3977, -0.1, -1.0224, 1.3883, -0.0719, -0.9889, 1.4418, -0.1, 1.441, 1.9443, -0.1392, 1.3303, 2.0483, -0.1, 1.547, 1.4418, -0.1, 1.441, 1.5198, -0.1392, 1.2561, 1.9443, -0.1392, 1.3303, 2.0483, -0.1, 1.547, 1.8768, 0.0008, 1.2645, 1.9517, 0.1, 1.453, 2.0483, -0.1, 1.547, 1.9443, -0.1392, 1.3303, 1.8768, 0.0008, 1.2645, -1.3731, 0.1, 1.359, -1.8604, 0.0008, 1.2645, -1.9311, 0.1, 1.453, -1.3731, 0.1, 1.359, -1.4698, 0.0008, 1.1987, -1.8604, 0.0008, 1.2645, -1.4418, -0.1, 1.441, -1.4698, 0.0008, 1.1987, -1.3731, 0.1, 1.359, -1.4418, -0.1, 1.441, -1.5179, -0.1392, 1.2561, -1.4698, 0.0008, 1.1987, 1.3731, 0.1, 1.359, 1.5198, -0.1392, 1.2561, 1.4418, -0.1, 1.441, 1.3731, 0.1, 1.359, 1.4718, 0.0008, 1.1987, 1.5198, -0.1392, 1.2561, 1.9517, 0.1, 1.453, 1.4718, 0.0008, 1.1987, 1.3731, 0.1, 1.359, 1.9517, 0.1, 1.453, 1.8768, 0.0008, 1.2645, 1.4718, 0.0008, 1.1987, -1.3996, -0.1, 0.3376, -1.3477, -0.1, 0.3593, -1.4281, -0.1397, 0.2098, -1.3477, -0.1, 0.3593, -1.3892, -0.0722, 0.3032, -1.3742, -0.0639, 0.2979, -1.3477, -0.1, 0.3593, -1.3996, -0.1, 0.3376, -1.3892, -0.0722, 0.3032, 1.3742, -0.0639, 0.2979, 1.4281, -0.1397, 0.2099, 1.3477, -0.1, 0.3593, 1.3996, -0.1, 0.3376, 1.3742, -0.0639, 0.2979, 1.3892, -0.0722, 0.3032, 1.4281, -0.1397, 0.2099, 1.3742, -0.0639, 0.2979, 1.3996, -0.1, 0.3376, -1.3477, -0.1, -1.0302, -1.3977, -0.1, -1.0224, -1.4281, -0.1397, -0.9501, -1.3977, -0.1, -1.0224, -1.373, -0.0653, -0.9831, -1.3883, -0.0719, -0.9889, -1.3477, -0.1, -1.0302, -1.373, -0.0653, -0.9831, -1.3977, -0.1, -1.0224, -1.928, -0.1392, 1.3303, -1.4698, 0.0008, 1.1987, -1.5179, -0.1392, 1.2561, -1.928, -0.1392, 1.3303, -1.8604, 0.0008, 1.2645, -1.4698, 0.0008, 1.1987, 1.5198, -0.1392, 1.2561, 1.8768, 0.0008, 1.2645, 1.9443, -0.1392, 1.3303, 1.5198, -0.1392, 1.2561, 1.4718, 0.0008, 1.1987, 1.8768, 0.0008, 1.2645 )

[node name="Normal" type="Area"]
script = ExtResource( 1 )

[node name="LaserTimer" type="Timer" parent="."]

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="Boss" parent="." instance=ExtResource( 4 )]

[node name="Cannon1" parent="Boss" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.7, 0, 1.6 )
show_cannon = false

[node name="Cannon2" parent="Boss" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 1.7, 0, 1.6 )
show_cannon = false

[connection signal="timeout" from="LaserTimer" to="." method="_on_LaserTimer_timeout"]
